--- a/judiblog-old/web/admin/post-manager.xhtml
+++ b/judiblog-old/web/admin/post-manager.xhtml
@@ -7,35 +7,26 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <body>
-
         <ui:composition template="./common.xhtml">
-
             <ui:define name="content">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="page-header"><h1>Post Management</h1></div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="alert alert-warning">
-                            <a href="#" class="close" data-dismiss="alert">&times;</a>
-                           
-                        </div>
-                    </div>
-                </div>
+                <h:messages class="col-md-12 alert-success"/>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">List Post</div>
                             <f:view>
                                 <h:form>
-                                    <h:dataTable value="#{postManagerBean.listPost}" var="item" headerClass="text-center"  styleClass="table table-hover table-bordered">
+                                    <h:dataTable value="#{postManagementBean.listPost}" var="item" headerClass="text-center"  styleClass="table table-hover table-bordered">
                                         <h:column>
                                             <f:facet name="header" >
                                                 <h:outputText value="Title"></h:outputText>
                                             </f:facet>
-                                            <h:link value="#{item.title}" coords="fd"/>
+                                            <h:commandLink value="#{item.title}" action="#{postManagementBean.preEdit(item)}"/>
                                         </h:column>
                                         <h:column>
                                             <f:facet name="header">
@@ -59,8 +50,8 @@
                                             <f:facet name="header">
                                                 <h:outputText value="Action"/>
                                             </f:facet>
-                                            <h:commandLink action="#{postManagerBean.detete(item.postID)}" value="Delete"/>
-                                            <h:commandLink action="#{postManagerBean.active(item.postID, !item.isActive)}" value="#{item.isActive ? 'Disable':'Enable'}" style="padding-left: 10px"/>
+                                            <h:commandLink action="#{postManagementBean.detete(item.postID)}" value="Delete"/>
+                                            <h:commandLink action="#{postManagementBean.active(item.postID, !item.isActive)}" value="#{item.isActive ? 'Disable':'Enable'}" style="padding-left: 10px"/>
                                         </h:column>
 
                                     </h:dataTable>
