--- a/trunk/judiblog-old/web/module/menu-left.xhtml
+++ b/trunk/judiblog-old/web/module/menu-left.xhtml
@@ -17,7 +17,7 @@
                     <b style="text-transform: uppercase;font-size: 1.2em;color:white">Menu</b>
                 </div>
                 <a href="home.jsf" class="list-group-item ">Home</a>
-                <a href="aboutTeam.jsf" class="list-group-item">About Us</a>
+                <a href="about-team.jsf" class="list-group-item">About Us</a>
                 <a href="#" class="list-group-item">Service</a>
                 <a href="contact.jsf" class="list-group-item">Contact</a>
             </div>
