--- a/trunk/judiblog-old/web/module/top-nav.xhtml
+++ b/trunk/judiblog-old/web/module/top-nav.xhtml
@@ -24,7 +24,7 @@
                     <a href="home.jsf"><img src="img/logo.png" ></img></a>
                 </div>
                 <div class="collapse navbar-collapse ">
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right" style="font-weight: bold">
                         <li class="active"><a href="home.jsf">HOME</a></li>
                         <li><a href="about-team.jsf">ABOUT US</a></li>
                         <li><a href="newTemplateClient.jsf">SERVICES</a></li>
