--- a/trunk/judiblog-old/web/template.xhtml
+++ b/trunk/judiblog-old/web/template.xhtml
@@ -64,8 +64,8 @@
 
         <h:outputScript name="./js/jquery-1.10.2.js" />
         <h:outputScript name="./js/bootstrap.min.js" />
-        <h:outputScript name="./js/jquery.dataTables.js" />
-        <h:outputScript name="./js/dataTables.bootstrap.js" />
+        <h:outputScript name="resources/js/plugins/dataTables/jquery.dataTables.js" />
+        <h:outputScript name="resources/js/plugins/dataTables/dataTables.bootstrap.js" />
         <h:outputScript name="./js/sb-admin.js" />
         <!--Date JQuery-->
         <h:outputScript name="./js/bootstrap-datetimepicker.min.js" />
