--- a/judiblog-old/web/admin/add-project.xhtml
+++ b/judiblog-old/web/admin/add-project.xhtml
@@ -1,14 +1,66 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
     <body>
 
         <ui:composition template="./common.xhtml">
 
             <ui:define name="content">
-                
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">Project Management</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading text-center">
+                                Add new project
+                            </div>
+                            <div class="panel-body">
+                                <div class="row">
+                                    <f:view>
+                                        <h:form role="form">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Project Name:</label>
+                                                    <h:inputText value="" class="form-control" id="projectName" pt:placeholder="Project Name"/>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>Start Date:</label>
+                                                    <h:inputText class="datetimepicker form-control" value="" id="startDate" pt:placeholder="Start date">
+                                                    <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                                    </h:inputText>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>Duration:</label>
+                                                    <h:inputText value="" class="form-control" id="duration" pt:placeholder="Duration"/>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>Project Type:</label>
+                                                    <h:inputText value="" class="form-control" id="projectType" pt:placeholder="Project Type"/>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label>Description:</label>
+                                                    <h:inputTextarea value="" class="form-control" id="descriptiton" pt:placeholder="Description"/>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-12 text-center">
+                                                <h:commandButton class="btn btn-outline btn-primary" value="Submit"/>
+                                                <button type="reset" class="btn btn-outline btn-primary">Reset</button>
+                                            </div>
+                                        </h:form>
+                                    </f:view>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </ui:define>
 
         </ui:composition>
